NN07 project done

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d68a6">  <td>20/08/12 17:56:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Config.afterEachTestMethod()[pri:0, instance:test_signIn.LoginWithInValidCredentialUsingEmail@2fd6b6c7]">&lt;&lt;afterEachTestMethod</td> 
-<td>&nbsp;</td>  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="7d68a6">  <td>20/08/12 17:55:30</td>   <td>-43311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Config.beforeEachTestMethod()[pri:0, instance:test_signIn.LoginWithInValidCredentialUsingEmail@2fd6b6c7]">&gt;&gt;beforeEachTestMethod</td> 
-<td>&nbsp;</td>  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="9ba3fb">  <td>20/08/12 17:55:38</td>   <td>-34507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginWithInValidCredentialUsingEmail.loginWithValidCredentialUsingEmailTest()[pri:0, instance:test_signIn.LoginWithInValidCredentialUsingEmail@2fd6b6c7]">loginWithValidCredentialUsingEmailTest</td> 
-  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="7d68a6">  <td>20/08/12 17:55:30</td>   <td>-43408</td> <td title="&gt;&gt;Config.startTestSuite()[pri:0, instance:test_signIn.LoginWithInValidCredentialUsingEmail@2fd6b6c7]">&gt;&gt;startTestSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="7d68a6">  <td>20/08/12 17:56:17</td>   <td>4114</td> <td title="&lt;&lt;Config.tearDown()[pri:0, instance:test_signIn.LoginWithInValidCredentialUsingEmail@2fd6b6c7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1019384604</td>   <td></td> </tr>
+<tr bgcolor="f2a664">  <td>20/08/30 11:13:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Config.afterEachTestMethod()[pri:0, instance:test_signIn.ContactwithWalmart@38c5cc4c]">&lt;&lt;afterEachTestMethod</td> 
+<td>&nbsp;</td>  <td>main@2061347276</td>   <td></td> </tr>
+<tr bgcolor="f2a664">  <td>20/08/30 11:13:45</td>   <td>21903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Config.afterEachTestMethod()[pri:0, instance:test_signIn.LoginWithInValidCredentialUsingEmail@37918c79]">&lt;&lt;afterEachTestMethod</td> 
+<td>&nbsp;</td>  <td>main@2061347276</td>   <td></td> </tr>
+<tr bgcolor="f2a664">  <td>20/08/30 11:14:00</td>   <td>37301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Config.afterEachTestMethod()[pri:0, instance:test_signIn.LoginWithValidCredentialUsingEmail@78e94dcf]">&lt;&lt;afterEachTestMethod</td> 
+<td>&nbsp;</td>  <td>main@2061347276</td>   <td></td> </tr>
+<tr bgcolor="f2a664">  <td>20/08/30 11:12:53</td>   <td>-29679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Config.beforeEachTestMethod()[pri:0, instance:test_signIn.ContactwithWalmart@38c5cc4c]">&gt;&gt;beforeEachTestMethod</td> 
+<td>&nbsp;</td>  <td>main@2061347276</td>   <td></td> </tr>
+<tr bgcolor="f2a664">  <td>20/08/30 11:13:27</td>   <td>4064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Config.beforeEachTestMethod()[pri:0, instance:test_signIn.LoginWithInValidCredentialUsingEmail@37918c79]">&gt;&gt;beforeEachTestMethod</td> 
+<td>&nbsp;</td>  <td>main@2061347276</td>   <td></td> </tr>
+<tr bgcolor="f2a664">  <td>20/08/30 11:13:45</td>   <td>21949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Config.beforeEachTestMethod()[pri:0, instance:test_signIn.LoginWithValidCredentialUsingEmail@78e94dcf]">&gt;&gt;beforeEachTestMethod</td> 
+<td>&nbsp;</td>  <td>main@2061347276</td>   <td></td> </tr>
+<tr bgcolor="bba67a">  <td>20/08/30 11:13:04</td>   <td>-19135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactwithWalmart.gettextofcontact()[pri:0, instance:test_signIn.ContactwithWalmart@38c5cc4c]">gettextofcontact</td> 
+  <td>main@2061347276</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>20/08/30 11:13:35</td>   <td>12463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginWithInValidCredentialUsingEmail.loginWithValidCredentialUsingEmailTest()[pri:0, instance:test_signIn.LoginWithInValidCredentialUsingEmail@37918c79]">loginWithValidCredentialUsingEmailTest</td> 
+  <td>main@2061347276</td>   <td></td> </tr>
+<tr bgcolor="7f83d9">  <td>20/08/30 11:13:54</td>   <td>30915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginWithValidCredentialUsingEmail.loginWithValidCredentialUsingEmailTest()[pri:0, instance:test_signIn.LoginWithValidCredentialUsingEmail@78e94dcf]">loginWithValidCredentialUsingEmailTest</td> 
+  <td>main@2061347276</td>   <td></td> </tr>
+<tr bgcolor="f2a664">  <td>20/08/30 11:12:53</td>   <td>-29777</td> <td title="&gt;&gt;Config.startTestSuite()[pri:0, instance:base.Config@223f3642]">&gt;&gt;startTestSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2061347276</td>   <td></td> </tr>
+<tr bgcolor="f2a664">  <td>20/08/30 11:14:00</td>   <td>37492</td> <td title="&lt;&lt;Config.tearDown()[pri:0, instance:base.Config@223f3642]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
